k8s/backend2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
spec:
  selector:
    app: backend2
  ports:
  - name: http
    port: 28080
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 28443
    targetPort: 8443
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  containers:
  - name: backend2
    image: f5devcentral/f5-demo-httpd:openshift
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 8080
      protocol: TCP
    - name: https
      containerPort: 8443
      protocol: TCP
