k8s/mi.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mi-service
spec:
  selector:
    app: mi
  ports:
  - name: http
    port: 8290
    targetPort: 8290
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: mi
  labels:
    app: mi
spec:
  containers:
  - name: mi
    image: mi
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 8290
      protocol: TCP
