k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api1"
        backend:
          service:
            name: mi-service
            port:
              number: 8290
